[gd_scene load_steps=6 format=3 uid="uid://bkwh6sf6t6jbp"]

[ext_resource type="Script" uid="uid://gtd3ev1mx4a2" path="res://scenes/Test_scenes/Draggable_Scene.gd" id="1_8kp3w"]
[ext_resource type="Script" uid="uid://c7mgxonou3t33" path="res://scenes/Test_scenes/draggable.gd" id="1_y8ajd"]
[ext_resource type="Script" uid="uid://btqru83ttjibd" path="res://scenes/Test_scenes/test_squares.gd" id="2_le1fh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyyac"]
bg_color = Color(0.417969, 0.345212, 0.267761, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.214844, 0.136152, 0.0520325, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8nj6p"]
bg_color = Color(0.73, 0.73, 0.73, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.21, 0.21, 0.21, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Draggable" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8kp3w")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1192.0
offset_top = 154.0
offset_right = 1726.0
offset_bottom = 914.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oyyac")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 154.0
offset_right = 816.0
offset_bottom = 914.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8nj6p")

[node name="DragZone2" type="Control" parent="."]
anchors_preset = 0
offset_left = 1228.0
offset_top = 178.0
offset_right = 1702.0
offset_bottom = 879.0

[node name="Draggable Zone" type="Control" parent="."]
anchors_preset = 0
offset_left = 308.0
offset_top = 178.0
offset_right = 785.0
offset_bottom = 896.0

[node name="Orange" type="Control" parent="Draggable Zone"]
anchors_preset = 0
offset_left = 97.0
offset_top = 388.0
offset_right = 215.0
offset_bottom = 484.0
script = ExtResource("1_y8ajd")
return_type = 0

[node name="Color_box" type="ColorRect" parent="Draggable Zone/Orange"]
layout_mode = 0
offset_right = 118.0
offset_bottom = 97.0
mouse_filter = 2
color = Color(1, 0.492188, 0, 1)

[node name="Button" type="TextureButton" parent="Draggable Zone/Orange"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 119.0
offset_bottom = 96.0

[node name="Red" type="Control" parent="Draggable Zone"]
anchors_preset = 0
offset_left = 65.0
offset_top = 218.0
offset_right = 183.0
offset_bottom = 314.0
script = ExtResource("1_y8ajd")
return_type = 2

[node name="Color_box" type="ColorRect" parent="Draggable Zone/Red"]
layout_mode = 0
offset_right = 118.0
offset_bottom = 97.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="Button" type="TextureButton" parent="Draggable Zone/Red"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 119.0
offset_bottom = 96.0

[node name="BLUE" type="Control" parent="Draggable Zone"]
anchors_preset = 0
offset_left = 52.0
offset_top = 57.0
offset_right = 170.0
offset_bottom = 153.0
script = ExtResource("2_le1fh")
color = Color(0, 0.226563, 1, 1)
return_type = 3

[node name="Color_box" type="ColorRect" parent="Draggable Zone/BLUE"]
layout_mode = 0
offset_right = 118.0
offset_bottom = 97.0
mouse_filter = 2
color = Color(0.195313, 1, 0, 1)

[node name="Button" type="TextureButton" parent="Draggable Zone/BLUE"]
layout_mode = 0
offset_left = -2.0
offset_top = 1.0
offset_right = 116.0
offset_bottom = 98.0

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 48.0
offset_right = 1074.0
offset_bottom = 175.0
text = "Save"

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_left = 1139.0
offset_top = 49.0
offset_right = 1361.0
offset_bottom = 176.0
text = "Load"

[node name="ChangeLevel" type="Button" parent="."]
layout_mode = 0
offset_left = 952.0
offset_top = 223.0
offset_right = 1174.0
offset_bottom = 350.0
text = "Change Level"

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="ChangeLevel" to="." method="_on_change_level_pressed"]
